# rust-game-engine

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile
lua/: test.lua
src/: main.rs  mine.rs  test.rs
src/comp_std/: framebuffer.rs  mesh.rs  model.rs  shader.rs
src/ecs/: component.rs  entity.rs  system.rs
src/engine/: display.rs  engine.rs  lua.rs  player.rs  state.rs
src/engine/comp_std/: mesh.rs  shader.rs
src/engine/util/: profiler.rs
src/experimental/: component.rs  storage.rs
src/test/: test.rs
src/util/: profiler.rs
