[package]
name = "bashura"
version = "0.1.0"
authors = ["dannowilby <dywilby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.36.0"
rlua = "0.17.0"
wasmer-runtime = "0.16.2"
nalgebra = "0.20"
tobj = "0.1.12"
image = "0.23.2"
rand = "0.7.3"